@@ -1,3 +1,8 @@
+2006-01-27 16:10 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridswap.c (gridRemoveThreeFaceCell) to fix uninitialize
+	memory read.
+
 2006-01-27 13:02 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridswap.c (gridRemoveThreeFaceCell) Add to combat the
